# Kernel-x86-64

./: .gitattributes  LICENSE  README.md
src/: .gitignore  CMakeLists.txt  README.md  build.sh  create_image.sh  run.sh
src/bootloader/: .gitignore  boot.asm
src/bootloader/long_mode/: clear.asm  print.asm
src/bootloader/protected_mode/: clear.asm  detect_lm.asm  elevate.asm  gdt.asm  init_pt.asm  print.asm
src/bootloader/real_mode/: elevate.asm  gdt.asm  load.asm  print.asm  print_hex.asm
src/kernel/: .gitignore  CMakeLists.txt  entry.asm
src/kernel/inc/: bitwise.h  formatting.h  init.h  io.h  types.h
src/kernel/inc/cpu/: ports.h
src/kernel/inc/driver/: vga.h
src/kernel/src/: formatting.c  init.c  io.c  kernel.c
src/kernel/src/cpu/: ports.c
src/kernel/src/driver/: vga.c
